# live-wire

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: main.py  requirements.txt
backend/agents/: orchestrator.py
backend/api/: rest_routes.py  websocket_handler.py
backend/audio/: capture.py  pipeline.py  vad.py
backend/memory/: session_store.py
backend/models/: model_manager.py  parakeet.py
backend/models/cached/: silero_vad.pt
backend/tools/: battlecards.py  integrations.py  kb_search.py
config/: agent_config.yaml  audio_device.txt
docs/: MAESTRO_COMPLETE_GUIDE.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.ts  preload.ts  tauriAPI.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: audio.rs  lib.rs
frontend/src/components/: AgentStatus.tsx  BANTChecklist.tsx  BattlecardPanel.tsx  EmotionMeter.tsx  HUD.tsx  RiskAlert.tsx  StrategyCard.tsx  TalkListenRatio.tsx  TranscriptFeed.tsx
frontend/src/hooks/: useAgentStream.ts  useAudioCapture.ts  useTranscribeStream.ts
frontend/src/stores/: callStore.ts
scripts/: download_models.py  setup_audio.sh  setup_audio_windows.ps1  setup_endeavouros.sh  setup_linux.sh  setup_windows.ps1  test_audio_capture.py
