[package]
name = "maestro-overlay"
version = "0.1.0"
description = "MAESTRO Agentic Sales Co-Pilot Overlay"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[dependencies.cpal]
version = "0.15"
